maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: not found: value x
        return (x,y)
                ^JediEscaper:11: error: not found: value y
        return (x,y)
                  ^JediEscaper:11: warning: enclosing method ilEstO?LeBiscuit has result type Unit: return value discarded
        return (x,y)
        ^